[package]
name = "tree-slab"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/tree-slab"
documentation = "https://docs.rs/tree-slab"
description = "A tree-backed slab allocator"
readme = "README.md"
edition = "2021"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <rust@yosh.is>"
]

[profile.bench]
debug = true

[lib]
bench = false

[[bench]]
name = "differential"
harness = false

[features]

[dependencies]

[dev-dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
criterion = {version = "0.5.1", features = ["html_reports"] }
heckcheck = "2.0.1"
slab = "0.4.9"
